--- a/tours.html
+++ b/tours.html
@@ -12,7 +12,7 @@
     <title>Ancestral Spirit - Туры</title>
 </head>
 <body>
-    <section class="nav">
+    <nav class="nav">
         <div class="nav-burger">
             <span></span>
         </div>
@@ -20,8 +20,8 @@
             Войти
             <img src="assets/icons/user-dark.png" alt="user-icon" height="20px" width="20px">
         </a>
-    </section>
-    <section class="header-and-help">
+    </nav>
+    <header class="header-and-help">
         <div class="header">
             <h2 class="header-page">
                 Наши <span class="header-styler">самые лучшие</span> туры для вашего <span class="header-styler">отдыха</span>
@@ -44,14 +44,88 @@
                 </form>
             </div>
         </div>
-    </section>
-    <section class="upperrow-filters">
-        <div class="up-filters__wrapper">
+    </header>
+    <main class="page-content">
+        <form action="SERVER PROCESSING HANDLER" class="filters" method="get">
+            <ul class="filters-aside">
+                <li class="filters-aside__item">
+                    <div class="item-price">
+                        <h4 class="filters-label">Цена за тур</h4>
+                        <p class="item-price__value">
+                            30000 - 240000 руб.
+                        </p>
+                        <div class="item-price__ranger">
+                            <input type="range" value="20000" min="20000" step="1000" max="240000" name="price" id="price">
+                        </div>
+                        <div class="item-price__inputs">
+                            <input type="text" name="min-price" id="min-price" value="20000" class="min-price price__input">
+                            <div class="item-price__splitter">
+                                <span></span>
+                            </div>
+                            <input type="text" name="max-price" id="max-price" value="240000" class="max-price price__input">
+                        </div>
+                    </div>
+                    <div class="item-flight">
+                        <h4 class="filters-label">Перелет</h4>
+                        <ul class="flight-options">
+                            <li class="flight-item">
+                                <input type="radio" name="flight_yes" checked="checked" id="flight_yes">
+				                <label class="active" for="flight_yes">С перелетом</label>
+                            </li>
+                            <li class="flight-item">
+                                <input type="radio" name="flight_no" id="flight_no">
+				                <label class="no-active" for="flight_no">Без перелета</label>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+            <ul class="filters-list">
+                <li class="filters-list__item">
+                    <div class="item">
+                        <div class="item-label">
+                            <img src="assets/icons/map-icon-dark.png" alt="country-icon">
+                            <label for="country">Страна</label>  
+                        </div>
+                        <select name="country" id="country" class="item-selector">
+                            <option value="any" class="item-option">Любая</option>  
+                        </select>
+                    </div>
+                </li>
+                <li class="filters-list__item">
+                    <div class="item">
+                        <div class="item-label">
+                            <img src="assets/icons/season-icon-dark.png" alt="season-icon">
+                            <label for="season">Сезон</label>
+                        </div>
+                        <select name="season" id="season" class="item-selector">
+                            <option value="any" class="item-option">Любой</option>  
+                        </select>
+                    </div>
+                </li>
+                <li class="filters-list__item">
+                    <div class="item">
+                        <div class="item-label">
+                            <img src="assets/icons/nights-icon-dark.png" alt="nights-icon">
+                            <label for="nights">Кол-во ночей</label>
+                        </div>
+                        <select name="nights" id="nights" class="item-selector">
+                            <option value="3to6" class="item-option">от 3 до 6 ночей</option>  
+                        </select>
+                    </div>
+                </li>
+                <li class="filters-list__item">
+                    <div class="item">
+                        <div class="item-label">
+                            <img src="assets/icons/person-icon-dark.png" alt="persons-icon">
+                            <label for="persons">Кол-во человек</label>
+                        </div>
+                        <input type="text" name="persons" id="persons" value="2 человека" class="item-input">
+                    </div>
+                </li>
+            </ul>
             
-        </div>
-    </section>
-    <section class="aside-filters">
-
-    </section>
+        </form>
+    </main>
 </body>
 </html>
