Tour type filter's checkboxes style fixed. Filters markup and styling completed

--- a/tours.html
+++ b/tours.html
@@ -122,15 +122,30 @@
                 <li class="filters-aside__item">
                     <div class="item-tourtype">
                         <h4 class="filters-label">Тип тура</h4>
-                        <ul class="checkbox1">
+                        <ul class="checkbox">
                             <li class="checkbox-item checkbox-item__walking">
                                 <input type="checkbox" checked value="walking" name="walking" id="walking">
                                 <label for="walking">Пеший</label>
                             </li>
+                            <li class="checkbox-item checkbox-item__cycling">
+                                <input type="checkbox" value="walking" name="cycling" id="cycling">
+                                <label for="cycling">Велосипедный</label>
+                            </li>
+                            <li class="checkbox-item checkbox-item__water">
+                                <input type="checkbox" value="water" name="water" id="water">
+                                <label for="water">Водный</label>
+                            </li>
+                            <li class="checkbox-item checkbox-item__hybrid">
+                                <input type="checkbox" value="hybrid" name="hybrid" id="hybrid">
+                                <label for="hybrid">Совмещенный</label>
+                            </li>
                         </ul>
                     </div>
                 </li>
-            </ul>
+                <li class="filters-data__sender">
+                    <input type="submit" value="Найти">
+                </li>
+            </ul>     
             <ul class="filters-list">
                 <li class="filters-list__item">
                     <div class="item">
