--- a/tours.html
+++ b/tours.html
@@ -86,8 +86,8 @@
                         <h4 class="filters-label">Категория места<br/>проживания</h4>
                         <ul class="checkbox">
                             <li class="checkbox-item checkbox-item__any"> 
-                                <input id="any" type="checkbox" checked name="any" value="any">
-                                <label for="any">Любая</label>
+                                <input id="accomodation" type="checkbox" checked name="accomodation" value="any">
+                                <label for="accomodation">Любая</label>
                             </li>
                             <li class="checkbox-item checkbox-item__fivestar">
                                 <input id="fivestar" type="checkbox" name="fivestar" value="fivestar">
@@ -190,8 +190,54 @@
                     </div>
                 </li>
             </ul>
-            
         </form>
+        <div class="tour-cards">
+            <div class="card">
+                <div class="card-data">
+                    <h5 class="card-header">Озеро при Сторвике</h5>
+                    <p class="card-description">Сторвик - населенный пункт, расположенный в муниципалитете Сандвикен, 
+                        уезд Евлеборг, Швеция с 2165 жителями в 2010 году. 
+                        Сторвик был и остается важным железнодорожным узлом для грузовых поездов.</p>
+                    <div class="card-upperrow-data">
+                        <ul class="upperrow-list">
+                            <li class="card-list__item">
+                                <img src="assets/icons/map-icon.png" alt="country-icon">
+                                <p>Швеция</p>
+                            </li>
+                            <li class="card-list__item">
+                                <img src="assets/icons/season-icon.png" alt="season-icon">
+                                <p>Сезон</p>
+                            </li>
+                            <li class="card-list__item">
+                                <img src="assets/icons/nights-icon.png" alt="nights-icon">
+                                <p>3 ночи</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card-bottomrow-data">
+                        <ul class="bottomrow-list">
+                            <li class="card-list__item">
+                                <img src="assets/icons/eating-icons.png" alt="eating-icon">
+                                <p>Все включено</p>
+                            </li>
+                            <li class="card-list__item">
+                                <img src="assets/icons/tourtype-icon.png" alt="type-icon">
+                                <p>Пеший</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card-category-price">
+                        <div class="category">
+                            <img src="assets/icons/star.png" alt="star-icon">
+                            <img src="assets/icons/star.png" alt="star-icon">
+                            <img src="assets/icons/star.png" alt="star-icon">
+                            <img src="assets/icons/star.png" alt="star-icon">
+                        </div>
+                        <p>60.000 руб</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
