Burger styling and animating completed

--- a/main.html
+++ b/main.html
@@ -18,11 +18,45 @@
             <div class="burger-opener">
                 <span></span>
             </div>
+            <nav class="burger">
+                <ul class="burger-links__list">
+                    <li class="burger-list__item first-item">
+                        <a href="#" class="burger-link">
+                            <h2 class="burger-link__header">главная</h2>
+                        <p class="burger-link__description">стартовая страница нашего агенства</p>
+                        </a>
+                    </li>
+                    <li class="burger-list__item second-item">
+                        <a href="#" class="burger-link">
+                            <h2 class="burger-link__header">туры</h2>
+                        <p class="burger-link__description">страница, содержащая наши самые лучшие туры</p>
+                        </a>
+                    </li>
+                    <li class="burger-list__item thrid-item">
+                        <a href="#" class="burger-link">
+                            <h2 class="burger-link__header">личный кабинет</h2>
+                        <p class="burger-link__description">ваше персональное пространство в нашем мире путешествий</p>
+                        </a>
+                    </li>
+                    <li class="burger-list__item fourth-item">
+                        <a href="#" class="burger-link">
+                            <h2 class="burger-link__header">помощь</h2>
+                        <p class="burger-link__description">ответы на самые часто задаваемые вопросы</p>
+                        </a>
+                    </li>
+                    <li class="burger-list__item fifth-item">
+                        <a href="#" class="burger-link">
+                            <h2 class="burger-link__header">о нас</h2>
+                        <p class="burger-link__description">расскажем кто мы и чем занимаемся не одно десятилетие</p>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
             <a href="auth.html" target="_blank" class="cabinet-link">
                 Войти
                 <img src="assets/icons/user.png" alt="user-icon" height="20px" width="20px">
             </a>
-        </div>
+            </div>
         <div class="offer-container">
             <h1 class="header-text">
                 Туры по <span class="header-styler">самым дальним</span> уголкам планеты для 
@@ -90,5 +124,7 @@
         </div>
     </div>
    </header>
+   <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+   <script src="js/burger.js"></script>
 </body>
 </html>
