--- a/tours.html
+++ b/tours.html
@@ -192,17 +192,16 @@
             </ul>
         </form>
         <div class="tour-cards">
-            <div class="card">
+            <a href="tours/swissWater.html" class="card">
                 <div class="card-data">
-                    <h5 class="card-header">Озеро при Сторвике</h5>
-                    <p class="card-description">Сторвик - населенный пункт, расположенный в муниципалитете Сандвикен, 
-                        уезд Евлеборг, Швеция с 2165 жителями в 2010 году. 
-                        Сторвик был и остается важным железнодорожным узлом для грузовых поездов.</p>
+                    <h5 class="card-header">Швейцарский водный мир</h5>
+                    <p class="card-description">Швейцария с огромными запасами пресной воды и более чем 1500 озерами 
+                        известна как «водохранилище Европы», а эпические ландшафты страны во многом определяются водой</p>
                     <div class="card-upperrow-data">
                         <ul class="upperrow-list">
                             <li class="card-list__item">
                                 <img src="assets/icons/map-icon.png" alt="country-icon">
-                                <p>Швеция</p>
+                                <p>Швейцария</p>
                             </li>
                             <li class="card-list__item">
                                 <img src="assets/icons/season-icon.png" alt="season-icon">
@@ -222,7 +221,7 @@
                             </li>
                             <li class="card-list__item">
                                 <img src="assets/icons/tourtype-icon.png" alt="type-icon">
-                                <p>Пеший</p>
+                                <p>Водный</p>
                             </li>
                         </ul>
                     </div>
@@ -236,7 +235,7 @@
                         <p>60.000 руб</p>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
     </main>
 </body>
