Burger menu integrated on tours page and auth page marked up and styled

--- a/main.html
+++ b/main.html
@@ -21,19 +21,19 @@
             <nav class="burger">
                 <ul class="burger-links__list">
                     <li class="burger-list__item first-item">
-                        <a href="#" class="burger-link">
+                        <a href="main.html" class="burger-link">
                             <h2 class="burger-link__header">главная</h2>
                         <p class="burger-link__description">стартовая страница нашего агенства</p>
                         </a>
                     </li>
                     <li class="burger-list__item second-item">
-                        <a href="#" class="burger-link">
+                        <a href="tours.html" class="burger-link">
                             <h2 class="burger-link__header">туры</h2>
                         <p class="burger-link__description">страница, содержащая наши самые лучшие туры</p>
                         </a>
                     </li>
                     <li class="burger-list__item thrid-item">
-                        <a href="#" class="burger-link">
+                        <a href="auth.html" class="burger-link">
                             <h2 class="burger-link__header">личный кабинет</h2>
                         <p class="burger-link__description">ваше персональное пространство в нашем мире путешествий</p>
                         </a>
@@ -56,7 +56,7 @@
                 Войти
                 <img src="assets/icons/user.png" alt="user-icon" height="20px" width="20px">
             </a>
-            </div>
+        </div>
         <div class="offer-container">
             <h1 class="header-text">
                 Туры по <span class="header-styler">самым дальним</span> уголкам планеты для 
